# dandere2x

./: .gitignore  Dockerfile  Dockerfile2  Dockerfile3  README.md  config.txt  dandere2xcpp_nb.exe.stackdump  log.txt
.github/: FUNDING.yml
.github/workflows/: githubactionsbuilds.yml  main.yml
cpp_rework/: CMakeLists.txt  dandere2x_utilities.cpp  dandere2x_utilities.h  driver.h  main.cpp
cpp_rework/evaluator/: AbstractEvaluator.h  MSE_Function.cpp  MSE_Function.h  SSIM_Function.cpp  SSIM_Function.h
cpp_rework/frame/: Frame.cpp  Frame.h  Frame_Utilities.h
cpp_rework/math/: MSE_Functions.cpp  MSE_Functions.h  SSIM_Function.cpp  SSIM_Function.h
cpp_rework/plugins/: AbstractPlugin.h  PredictiveFrame.cpp  PredictiveFrame.h
cpp_rework/plugins/block_plugins/: Block.cpp  Block.h  BlockMatchingMemoization.cpp  BlockMatchingMemoization.h
cpp_rework/plugins/block_plugins/block_matching/: AbstractBlockMatch.h  DiamondSearch.h  ExhaustiveSearch.cpp  ExhaustiveSearch.h
cpp_rework/plugins/block_plugins/block_matching_algorithms/: AbstractBlockMatch.h  DiamondSearch.cpp  DiamondSearch.h  ExhaustiveSearch.cpp  ExhaustiveSearch.h
cpp_rework/plugins/frade_frame/: FadeFrame.cpp  FadeFrame.h
cpp_rework/plugins/predictive_frame/: PredictiveFrame.cpp  PredictiveFrame.h
cpp_rework/testcases/: BlockMatchingMemoizationTestCases.h
dandere2x-env/: pip-selfcheck.json
dandere2xCPP/src/: Driver.h  main.cpp
dandere2x_cpp/: CMakeLists.txt  dandere2x_utilities.cpp  driver.h  main.cpp
dandere2x_cpp/dandere2xcpp_nb/: dandere2xcpp_nb.exe.stackdump
dandere2x_cpp/dandere2xcpp_nb/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
dandere2x_cpp/dandere2xcpp_nb/nbproject/private/: configurations.xml  private.xml
dandere2x_cpp/easyloggingpp/: easylogging++.cc.h
dandere2x_cpp/evaluator/: MSE_Function.cpp  MSE_Function.h  SSIM_Function.h
dandere2x_cpp/frame/: Frame.cpp  Frame.h  Frame_Utilities.h  lab_utilities.h
dandere2x_cpp/plugins/: AbstractPlugin.h
dandere2x_cpp/plugins/block_plugins/: Block.cpp  Block.h
dandere2x_cpp/plugins/block_plugins/block_matching/: AbstractBlockMatch.h  DiamondSearch.cpp  ExhaustiveSearch.cpp  ExhaustiveSearch.h
dandere2x_cpp/plugins/frade_frame/: FadeFrame.cpp  FadeFrame.h  FadeFrameDynamicBlockSize.h
dandere2x_cpp/plugins/predictive_frame/: PredictiveFrame.cpp  PredictiveFrame.h  predictive_frame_dynamic_block_size.h
dandere2x_cpp/plugins/predictive_frame_dynamic_block_size/: predictive_frame_dynamic_block_size.cpp  predictive_frame_dynamic_block_size.h
dandere2x_cpp/src/: Driver.h  main.cpp
dandere2x_cpp/src/BlockMatch/: Block.h  DiamondSearch.h  ExhaustiveSearch.h
dandere2x_cpp/src/Dandere2xUtils/: Dandere2xUtils.cpp  Dandere2xUtils.h  VectorDisplacement.h
dandere2x_cpp/src/DandereUtils/: DandereUtils.h
dandere2x_cpp/src/Difference/: Correction.h  Inversion.h  PDifference.h
dandere2x_cpp/src/Image/: Image.cpp  Image.h  ImageUtils.h  stb_image.h
dandere2x_cpp/src/Image/BlockMatch/: DiamondSearch.h
dandere2x_cpp/src/Image/DebugImage/: DebugImage.h  lodepng.cpp  lodepng.h
dandere2x_cpp/src/Image/Image/: Image.h  ImageUtils.h
dandere2x_cpp/src/Image/SSIM/: SSIM-MSE.h  SSIM.h  SsimStatsFunctions.h
dandere2x_cpp/src/PFrame/: PFrame.cpp  PFrame.h
dandere2x_cpp/src/PFrame/Correction/: Correction.cpp  Correction.h
dandere2x_cpp/src/PFrame/Difference/: DifferenceBlocks.h  Differences.cpp  Differences.h
dandere2x_cpp/src/Plugins/Correction/: Correction.cpp  Correction.h
dandere2x_cpp/src/Plugins/Fade/: Fade.cpp  Fade.h
dandere2x_cpp/src/Plugins/PFrame/: PFrame.cpp  PFrame.h
dandere2x_cpp/src/Plugins/PFrame/Difference/: DifferenceBlocks.h  Differences.cpp  Differences.h
dandere2x_cpp/src/Plugins/PFrame/Residual/: Residual.cpp  Residual.h  ResidualBlocks.h
docs/: akai_katto.rst  conf.py  download_and_use.rst  faq.rst  index.rst  json_settings.rst  linux_build_instructions.rst  overview.rst  recommended_settings.rst  requirements.txt  trouble_shooting.rst
docs/source/: conf.py  index.txt
src/: Dandere2x.py  Dandere2xCppWrapper.py  Dandere2xUtils.py  Dandere2x_Cpp_Wrapper.py  Difference.py  Difference_Script.py  Frame.py  Merge.py  Merge_Script.py  Waifu2xCaffe.py  build_linux.sh  config.ini  context.py  controller.py  dandere2x.json  dandere2x.py  dandere2x_cli.py  dandere2x_directories_win32.yaml  dandere2x_gui_wrapper.py  dandere2x_json.py  dandere2x_linux.json  dandere2x_linux.yaml  dandere2x_old.py  dandere2x_session_win32.yaml  dandere2x_win32.json  dandere2x_win32.yaml  dandere2x_win32_ncnn_vulkan.yaml  dandere_context.py  default_log.txt  executable_paths.yaml  ffmpeg.py  ffmpeg_convert_video.txt  gui_driver.py  gui_driver_from_json.py  gui_driver_new.py  json_driver.py  json_driver_resume.py  json_driver_start.py  json_dump.json  json_gui_driver.py  (+28 more)
src/-/: commands.txt  frames.txt  waifu2x_script.sh
src/Dandere2xCore/: Dandere2x.py  Dandere2xUtils.py  Difference.py  Merge.py
src/Wrappers/: Dandere2xCpp.py  Dandere2xCppWrapper.py  Frame.py  Waifu2xCaffe.py  Waifu2xConv.py  ffmpeg.py
src/config_files/: dandere2x_session_win32.yaml  executable_paths.yaml  nvidia_icd.x86_64.json  output_options.yaml
src/dandere2x/: Dandere2x.java  Difference.java  Merge.java  MultiProcess.py  SingleProcess.py  __dandere2x_interface.py  __dandere2x_logger__.py  __dandere2x_service.py  __dandere2x_service_context.py  __dandere2x_service_controller.py  __init__.py  _dandere2x_service.py  context.py  dandere2x_core.py  dandere2x_cpp.py  dandere2x_interface.py  dandere2x_logger.py  dandere2x_logger__.py  dandere2x_service.py  dandere2x_service_old.py  dandere2x_service_request.py  dandere2x_sp.py  multiprocess.py  raw.py  singleprocess.py  what.py
src/dandere2x_core/: Correction.py  context.py  correction.py  dandere2x_utils.py  difference.py  fade.py  frame_compressor.py  json_utils.py  merge.py  mse_computer.py  status.py
src/dandere2xlib/: frame_compressor.py  min_disk_usage.py  mindiskusage.py  (+5 more)
(+192 files in other folders)
